layout-structure.less: Fix service grid horizontal scrolling
refs #4242

--- a/public/css/icinga/layout-structure.less
+++ b/public/css/icinga/layout-structure.less
@@ -37,6 +37,7 @@ body {
   flex: 1;
   display: flex;
   z-index: 1;
+  max-width: calc(~"100% - "@sidebar-width);
 }
 
 .iframe {
